--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+	*{margin: 0;padding: 0;font-family: 'Josefin Sans', sans-serif;}
+	body{background-color: #0c111b!important;}
+    .collapse_div{
+      margin:10px 0;
+    }
+  	.card{
+  		cursor: pointer;
+  		
+  	}
+  	.main-card{
+    margin: 10px 7px 40px 6px;
+    width: 208px;
+	height: 108px;
+	position: relative;
+	}
+	
+	.main-card div{
+		position: absolute;
+		bottom: -10px;
+		width: 100%;
+		background-color: #0000006e;
+		color: white;
+		border-radius: 0 0 15px 15px;
+		font-size: 1.2rem;
+		height: 36px;
+		padding: 5px 23px;
+	}
+    
+  	.main-card img{
+  		/*width: 100%;*/
+      border-radius: 15px;
+      width: 100%;
+      height: 100%;
+  	}
+  	.outer-div{
+  		display: flex;
+  		justify-content: flex-start;
+  		align-items: center;
+		  flex-wrap: wrap;
+		  background: #0c111b;
+		  padding-top: 24px;
+    }
+    
+    @media(max-width: 768px)
+    {
+    	.main-card{
+			width: 11rem;
+			margin: 8px 5px;
+    	}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+    }
