--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   	}
   	.outer-div{
   		display: flex;
-  		justify-content: flex-start;
+  		justify-content: center;
   		align-items: center;
 		  flex-wrap: wrap;
 		  background: #0c111b;
@@ -45,8 +45,8 @@
     @media(max-width: 768px)
     {
     	.main-card{
-			width: 11rem;
-			margin: 8px 5px;
+			width: 10rem;
+			margin: 8px 3px;
     	}
 
     }
